--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
           docker buildx create --name arm64builder --use
-          docker buildx build --platform linux/amd64,linux/arm64 -f Dockerfile -t ghcr.io/jaegyoung/box:latest --push .
+          docker buildx build --platform linux/amd64,linux/arm64 -f DockerFile -t ghcr.io/jaegyoung/box:latest --push .
           docker logout
           
   deploy:
